<resources>
    <string name="app_name">神州万商</string>


    <string name="tab_home">首页</string>
    <string name="tab_classify">分类</string>
    <string name="tab_search">搜索</string>
    <string name="tab_personal">我的</string>
    <string name="tab_recommend">推荐</string>


    <!--八大分类-->
    <string name="food">餐饮美食</string>
    <string name="supermarket">超市百货</string>
    <string name="entertainment">娱乐休闲</string>
    <string name="life">生活服务</string>

    <string name="wholesale">贸易批发</string>
    <string name="business">商业服务</string>
    <string name="education">教育培训</string>
    <string name="car">汽车服务</string>


    <!--热门广告-->
    <string name="hot_ad">金卡通道，2018年信用卡大全 免费申请... </string>
    <string name="hot1_address">金羊座时尚餐厅（乐丰店）</string>
    <string name="hot2_address">金羊座时尚餐厅（乐丰店）</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--我的万商-->
    <string name="money">入驻万商</string>
    <string name="apply">申请成为区域代理</string>
    <string name="service">联系客服</string>
    <string name="about">关于万商</string>

    <!--推荐-->
    <string name="recommed_enter">推荐好友入驻万商</string>
    <string name="recommed_friend">推荐好友加入代理</string>
    <string name="recommed_money">查看我的推荐</string>

    <!--入驻万商-->
    <string name="settled_classify">商家分类:</string>
    <string name="settled_name">商家名称:</string>
    <string name="settled_addres">商家地址:</string>
    <string name="settled_coordinate">商家坐标:</string>
    <string name="settled_fixed_phone">固定电话:</string>
    <string name="settled_tel">手机号码:</string>
    <string name="settled_main_business">主营:</string>
    <string name="settled_ad">广告:</string>
    <string name="settled_post_photo">上传商家照片:</string>
    <string name="settled_recommend">推荐人:</string>
    <string name="wanshang_normal">万商普通商家</string>
    <string name="wanshang_vip">万商高级商家</string>
    <string name="settled_submit">提交审核</string>


    <string name="default_ad_content">庆圣诞、元旦充值活动：充1000返300，多充多返，欢迎各新老客户光临！</string>


    <!-- 下拉刷新相关 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    <string name="wanshang_about">"神州万商"是一款针对小微商户的电子黄页。\n万商的特点是：商家入驻无门槛，广告发布不收费。\n商业资源融合分享，助力商家生意年年红。</string>

    <string name="recommend_enter">邀请您入驻神州万商，无门槛的移动互联网商业门户”，页面地址为http://www.sz-ws.cn/join.html</string>
    <string name="recommend_proxy">邀请您成为神州万商地区代理，服务商家，创造财富”，页面地址为http://www.sz-ws.cn/join.html
</string>


</resources>
