<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/btn_home"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/tab_home" />

        <TextView
            android:id="@+id/tv_classify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/btn_classify"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/tab_classify"/>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/btn_search"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/tab_search"/>

        <TextView
            android:id="@+id/tv_personal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/btn_personal"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/tab_personal"/>


        <TextView
            android:id="@+id/tv_recommend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/btn_recommend"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/tab_recommend"/>


    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/text_gray"
        android:layout_above="@id/tab_menu"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
        android:background="@color/transparent">
    </FrameLayout>

</RelativeLayout>
