<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.ws.sz.activity.MoneyActivity"
    android:orientation="vertical"
    android:background="@color/grayLight">

    <include layout="@layout/title_bar"></include>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--商家分类-->
            <RelativeLayout
                android:id="@+id/rlSettledClassify"
                style="@style/personal_summary_5_65">
                <ImageView
                    android:id="@+id/star"
                    style="@style/business_detail_iv"
                    android:src="@drawable/ic_star_black_24dp"/>
                <TextView
                    android:id="@+id/tvSettledClassify1"
                    style="@style/business_detail_tv"
                    android:layout_toRightOf="@+id/star"
                    android:text="@string/settled_classify"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tvSettledClassify2"
                    style="@style/business_detail_tv"
                    android:layout_toRightOf="@+id/tvSettledClassify1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/grayLight"
                    android:text="请选择商家所属的分类" />
                <ImageView
                    style="@style/business_detail_iv_right"
                    android:src="@mipmap/btn_classifyl_go"/>
            </RelativeLayout>


            <!--商家名称-->
            <RelativeLayout
                android:layout_marginTop="1dp"
                android:id="@+id/rlSettledName"
                style="@style/personal_summary_5_65">
                <ImageView
                    android:id="@+id/star1"
                    style="@style/business_detail_iv"
                    android:src="@drawable/ic_star_black_24dp"/>
                <TextView
                    android:id="@+id/tvSettledName1"
                    style="@style/business_detail_tv"
                    android:layout_toRightOf="@+id/star1"
                    android:text="@string/settled_name"
                    android:textColor="@color/black" />
                <EditText
                    android:id="@+id/tvSettledName2"
                    style="@style/business_detail_tv"
                    android:layout_toRightOf="@+id/tvSettledName1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:hint="请输入商家的名称"
                    android:textColorHint="@color/grayLight"/>
            </RelativeLayout>
            <!--商家地址-->
            <RelativeLayout
                android:layout_marginTop="1dp"
                android:id="@+id/rlSettledAddres"
                style="@style/personal_summary_5_65">
                <ImageView
                    android:id="@+id/star2"
                    style="@style/business_detail_iv"
                    android:src="@drawable/ic_star_black_24dp"/>
                <TextView
                    android:id="@+id/tvSettledAddresss1"
                    style="@style/business_detail_tv"
                    android:layout_toRightOf="@+id/star2"
                    android:text="@string/settled_addres"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tvSettledAddresss2"
                    style="@style/business_detail_tv"
                    android:layout_toRightOf="@+id/tvSettledAddresss1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/grayLight"
                    android:text="请输入商家的地址" />
                <ImageView
                    style="@style/business_detail_iv_right"
                    android:src="@mipmap/btn_classifyl_go"/>
            </RelativeLayout>
            <!--详细地址-->
            <RelativeLayout
                style="@style/personal_summary_5_65_">
                <ImageView
                    android:id="@+id/star3"
                    style="@style/business_detail_iv"
                    android:src="@drawable/ic_star_black_24dp"
                    android:visibility="invisible"/>
                <View
                    android:layout_toRightOf="@id/star3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/grayLight"></View>
                <EditText
                    android:id="@+id/etDetailAddress"
                    style="@style/business_detail_tv"
                    android:layout_toRightOf="@+id/star3"
                    android:hint="请输入详细地址"
                    android:textColorHint="@color/grayLight"
                    android:background="@null"
                    android:textCursorDrawable="@null"/>
            </RelativeLayout>
            <!--商家坐标-->
            <RelativeLayout
                android:layout_marginTop="1dp"
                android:id="@+id/rlSettledCoordinate"
                style="@style/personal_summary_5_65">
                <ImageView
                    android:id="@+id/star4"
                    style="@style/business_detail_iv"
                    android:src="@drawable/ic_star_black_24dp"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/tvSettledCoordinate1"
                    style="@style/business_detail_tv"
                    android:layout_toRightOf="@+id/star4"
                    android:text="@string/settled_coordinate"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tvSettledCoordinate2"
                    style="@style/business_detail_tv"
                    android:layout_toRightOf="@+id/tvSettledCoordinate1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/grayLight"
                    android:text="请进入地图页面确定坐标(选填)" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/grayLight"></View>
                <!--固定电话-->
                <RelativeLayout
                    android:id="@+id/rlSettledPhone"
                    style="@style/personal_summary_5_65">
                    <ImageView
                        android:id="@+id/star5"
                        style="@style/business_detail_iv"
                        android:src="@drawable/ic_star_black_24dp"
                        android:visibility="invisible"/>
                    <TextView
                        android:id="@+id/tvSettledPhone1"
                        style="@style/business_detail_tv"
                        android:layout_toRightOf="@+id/star5"
                        android:text="@string/settled_fixed_phone"
                        android:textColor="@color/black" />
                    <EditText
                        android:id="@+id/tvSettledPhone2"
                        style="@style/business_detail_tv"
                        android:layout_toRightOf="@+id/tvSettledPhone1"
                        android:maxLength="13"
                        android:textColor="@color/black"
                        android:hint="请输入商家的固定电话(选填)"
                        android:textColorHint="@color/grayLight"
                        android:background="@null"
                        android:textCursorDrawable="@null"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayLight"></View>

                <!--手机号码-->
                <RelativeLayout
                    android:id="@+id/rlSettledTel"
                    style="@style/personal_summary">
                    <ImageView
                        android:id="@+id/star6"
                        style="@style/business_detail_iv"
                        android:src="@drawable/ic_star_black_24dp"/>
                    <TextView
                        android:id="@+id/tvSettledTel1"
                        style="@style/business_detail_tv"
                        android:layout_toRightOf="@+id/star6"
                        android:text="@string/settled_tel"
                        android:textColor="@color/black" />
                    <EditText
                        android:id="@+id/tvSettledTel2"
                        style="@style/business_detail_tv"
                        android:layout_toRightOf="@+id/tvSettledTel1"
                        android:textColor="@color/black"
                        android:hint="请输入商家的手机号码"
                        android:textColorHint="@color/grayLight"
                        android:background="@null"
                        android:textCursorDrawable="@null"
                        android:inputType="phone" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayLight"></View>
                <!--主营-->
                <RelativeLayout
                    android:id="@+id/rlSettledMainBusiness1"
                    style="@style/personal_summary">

                    <ImageView
                        android:id="@+id/star7"
                        style="@style/business_detail_iv"
                        android:src="@drawable/ic_star_black_24dp"/>

                    <TextView
                        android:id="@+id/tvSettledMainBusiness1"
                        style="@style/business_detail_tv"
                        android:layout_toRightOf="@+id/star7"
                        android:text="@string/settled_main_business"
                        android:textColor="@color/personal_summary" />

                </RelativeLayout>

                <LinearLayout
                    style="@style/personal_summary_5_200"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/mainProducts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="请输入商家的主营内容，最多500字"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grayLight"
                        android:background="@null"
                        android:textCursorDrawable="@null"
                        android:maxLength="500" />
                </LinearLayout>


                <!--广告-->
                <RelativeLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/rlSettledAd1"
                    style="@style/personal_summary">

                    <ImageView
                        android:id="@+id/star8"
                        style="@style/business_detail_iv"
                        android:src="@drawable/ic_star_black_24dp"/>

                    <TextView
                        android:id="@+id/tvSettledAd1"
                        style="@style/business_detail_tv"
                        android:layout_toRightOf="@+id/star8"
                        android:text="@string/settled_ad" />

                </RelativeLayout>

                <LinearLayout
                    style="@style/personal_summary_5_100"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/ad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="请输入商家的广告，最多200字"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grayLight"
                        android:background="@null"
                        android:textCursorDrawable="@null"
                        android:maxLength="200" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"></View>
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">
                <!--上传商家照片-->
                <RelativeLayout
                    android:id="@+id/rlSettledPosPhoto"
                    style="@style/personal_summary">

                    <ImageView
                        android:id="@+id/star9"
                        style="@style/business_detail_iv"
                        android:src="@drawable/ic_star_black_24dp"/>

                    <TextView
                        android:id="@+id/tvSettledPosPhoto1"
                        style="@style/business_detail_tv"
                        android:layout_toRightOf="@+id/star9"
                        android:text="@string/settled_post_photo"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvSettledPosPhoto2"
                        style="@style/business_detail_iv_right"
                        android:paddingRight="10dp"
                        android:layout_toRightOf="@+id/tvSettledPosPhoto1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/grayLight"
                        android:text="商家二维码、门店图片等，限5张" />

                </RelativeLayout>


                <cn.ws.sz.view.MyGridView
                    android:id="@+id/gvPostPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:horizontalSpacing="3dp"
                    android:numColumns="3"
                    android:scrollbars="none"
                    android:verticalSpacing="3dp">
                </cn.ws.sz.view.MyGridView>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/grayLight"></View>
            <!--商家类型-->
            <RelativeLayout
                android:id="@+id/rlSettledUserType"
                style="@style/personal_summary_5_85">

                <ImageView
                    android:id="@+id/star10"
                    style="@style/business_detail_iv"
                    android:src="@drawable/ic_star_black_24dp"
                    android:visibility="invisible"/>

                <RadioGroup
                    android:id="@+id/rgSettledUserType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/star10"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rgSettledUserNormal"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wanshang_normal" />
                    />

                    <RadioButton
                        android:id="@+id/rgSettledUserVip"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wanshang_vip"/>
                    />

                </RadioGroup>

            </RelativeLayout>


            <!--推荐人-->
            <RelativeLayout
                android:layout_marginTop="1dp"
                android:id="@+id/rlSettledCommend"
                style="@style/personal_summary">
                <ImageView
                    android:id="@+id/star11"
                    style="@style/business_detail_iv"
                    android:src="@drawable/ic_star_black_24dp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/tvSettledCommend1"
                    style="@style/business_detail_tv"
                    android:layout_toRightOf="@+id/star11"
                    android:text="@string/settled_recommend"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/tvSettledCommend2"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvSettledCommend1"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:textColorHint="@color/grayLight"
                    android:hint="请输入推荐人手机号码(选填)" />

            </RelativeLayout>


            <Button
                android:id="@+id/submitMoney"
                android:layout_marginTop="5dp"
                style="@style/personal_summary_4_1"
                android:text="@string/settled_submit"
                android:textColor="@color/white"
                android:gravity="center">
            </Button>

        </LinearLayout>
    </ScrollView>





</LinearLayout>
